issue-2299: Vertical align icon url

--- a/src/ui/public/kibi/directives/kibi_nav_bar.less
+++ b/src/ui/public/kibi/directives/kibi_nav_bar.less
@@ -56,6 +56,7 @@ kibi-nav-bar {
             img.icon {
               width: 16px;
               height: 16px;
+              top: 25%;
             }
 
           }
@@ -173,4 +174,3 @@ kibi-nav-bar {
   }
 
 }
-
